base/fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-clusterissuer'
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: temporal-auth
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  tls:
    - hosts:
        - scg.sh
      secretName: gitops-fe-tls
  rules:
    - host: scg.sh
      http:
        paths:
          - backend:
              service:
                name: fe-service
                port:
                  number: 80
            path: /
            pathType: Prefix
